# nexus

./: CLAUDE.md  Cargo.toml  README.md
cli-shell/: Cargo.toml
cli-shell/src/: main.rs
examples/volume/: Cargo.toml
examples/volume/src/: cli.rs  server.rs
libnexus/: Cargo.toml  GUIDE.md
libnexus/nexus-derive/: Cargo.toml
libnexus/nexus-derive/src/: lib.rs
libnexus/proto/: nexus.proto
libnexus/src/: cli.rs  lib.rs  registry.rs  server.rs
nexus/: Cargo.toml  build.rs
nexus-derive/src/: lib.rs
storage-daemon/: Cargo.toml
storage-daemon/src/: main.rs
storage-daemon/src/services/: block.rs  mod.rs  pool.rs  volume.rs
