[workspace]
resolver = "2"
members = [
    "libnexus/nexus-derive",
    "libnexus",
    "storage-daemon",
    "cli-shell",
    "integration-tests",
]
exclude = ["yocto"]

[patch."https://github.com/chenpc/libnexus.git"]
libnexus = { path = "libnexus" }
nexus-derive = { path = "libnexus/nexus-derive" }

